// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  className="sc-bdVaJa clcVJW"
  data-testid="navbar"
>
  delete!
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  className="sc-bdVaJa clcVJW"
  data-testid="navbar"
>
  ha2!
</div>
`;
